fix up home header spacing

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -47,7 +47,7 @@ header.home {
     max-width: clamp(450px, 50vw, 750px);
 
     p {
-        margin: 1em auto;
+        margin: 3em auto;
         line-height: 1.35em;
     }
 
